# TestCPPCodes

./: .gitignore  Notes.docx
Learning/: Learning.sln  desktop.ini
Learning/AlgorithmsImp/: AlgorithmsImp.vcxproj  AlgorithmsImp.vcxproj.filters  AlgorithmsSearch.cpp  AlgorithmsSort.cpp  BubbleSort.h  BubbleSort1.h  BucketSort.h  CycleSort.h  MergeSort.h  RadixSort.h
Learning/CMakeProject/: CMakeCache.txt  Catch.sln  cmake_install.cmake  prog.vcxproj  prog.vcxproj.filters  tests.vcxproj
Learning/ClionProjectTestCPP17/: CMakeLists.txt  MainVS.cpp  main.cpp
Learning/ClionProjectTestCPP17/HeaderFiles/: ApplyTupleFunction.h  ArrayView.h  ChangeAlgorithms.h  ClassTemplateSFINAE.h  CustomAllocator.h  ExecteTaskAsychronously.h  INVOKE.h  Includes.h  Lambda.h  NicolasExamples.h  NicolasExamples2.h  Observer.h  PassValuesBetweenThreads.h  RangeBasedAlgorithms.h  TemplateExample.h  TestClass.h  ThreadsSamples.h
Learning/ClionProjectTestCPP17/SourceFiles/: ApplyTupleFunction.cpp  ArrayView.cpp  ChangeAlgorithms.cpp  CustomAllocator.cpp  ExecteTaskAsychronously.cpp  Lambda.cpp  NicolasExamples.cpp  NicolasExamples2.cpp  Observer.cpp  PassValuesBetweenThreads.cpp  RangeBasedAlgorithms.cpp  TemplateExample.cpp  TestClass.cpp  ThreadsSamples.cpp
Learning/Docs/: Notes.docx  (+9 more)
TestCPP/: TestCPP.sln
TestCPP/CMakeProject/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
TestCPP/CMakeProject/_build/: CMakeCache.txt
TestCPP/CMakeProject/src/: ALL_BUILD.vcxproj.filters  Hello_prog.sln  cmake_install.cmake
(+519 files in other folders)
